[package]
name = "mc-honeypot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
base64 = "0.22.0"